添加json序列化功能.

--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -222,7 +222,7 @@
         android:layout_width="330dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/nav_menu"
+        app:menu="@menu/schedule_nav_menu"
         app:headerLayout="@layout/nav_header"
         />
 </androidx.drawerlayout.widget.DrawerLayout>
