--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
@@ -20,20 +21,19 @@
         android:id="@+id/like"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
         android:src="@color/colorAccent"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/portrait"
-        app:layout_constraintTop_toBottomOf="@+id/post_content" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <ImageView
         android:id="@+id/comment"
-        android:layout_marginLeft="25dp"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="25dp"
         android:src="@color/colorAccent"
         app:layout_constraintStart_toEndOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@+id/post_content" />
+        app:layout_constraintTop_toTopOf="@+id/like" />
 
     <TextView
         android:id="@+id/post_username"
@@ -102,5 +102,13 @@
         android:layout_marginBottom="30dp"
         app:layout_constraintStart_toStartOf="@+id/portrait"
         app:layout_constraintTop_toBottomOf="@+id/like_number" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/post_content"
+        app:layout_constraintTop_toBottomOf="@+id/post_content"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
