--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -14,94 +14,156 @@
         android:background="@color/colorPrimary"
         tools:ignore="MissingConstraints" />
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/portrait"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:src="@color/colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:shapeAppearance="@style/CircleStyle" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-    <ImageView
-        android:id="@+id/like"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
-        android:src="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/portrait"
-        app:layout_constraintTop_toBottomOf="@+id/post_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/post_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="用户名"
-        android:textColor="@color/black"
-        android:textSize="19dp"
-        android:layout_marginLeft="9dp"
-        app:layout_constraintStart_toEndOf="@+id/portrait"
-        app:layout_constraintTop_toTopOf="@+id/portrait" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/delete_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:text="删除"
-        android:textColor="@color/red"
-        android:textSize="19dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/portrait" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/portrait"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="15dp"
+                    android:src="@color/colorPrimary"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearance="@style/CircleStyle" />
 
-    <TextView
-        android:id="@+id/post_userinfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="学院"
-        android:textColor="@color/text_gray"
-        android:textSize="15dp"
-        app:layout_constraintStart_toStartOf="@+id/post_username"
-        app:layout_constraintTop_toBottomOf="@+id/post_username" />
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/portrait"
+                    app:layout_constraintTop_toBottomOf="@+id/portrait" />
 
-    <TextView
-        android:id="@+id/post_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="这是内容这是内容这是内容这是内容这是内容这是内容这是内容"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/portrait"
-        app:layout_constraintTop_toBottomOf="@+id/portrait" />
+                <ImageView
+                    android:id="@+id/like"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="20dp"
+                    android:src="@color/colorAccent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/portrait"
+                    app:layout_constraintTop_toBottomOf="@+id/post_content" />
 
-    <TextView
-        android:id="@+id/like_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="赞数"
-        android:textColor="@color/black"
-        android:textSize="19dp"
-        app:layout_constraintEnd_toEndOf="@+id/like"
-        app:layout_constraintStart_toStartOf="@+id/like"
-        app:layout_constraintTop_toBottomOf="@+id/like" />
+                <TextView
+                    android:id="@+id/post_username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="9dp"
+                    android:text="用户名"
+                    android:textColor="@color/black"
+                    android:textSize="19dp"
+                    app:layout_constraintStart_toEndOf="@+id/portrait"
+                    app:layout_constraintTop_toTopOf="@+id/portrait" />
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2000-00-00"
-        android:textColor="@color/text_gray"
-        android:textSize="12dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintStart_toStartOf="@+id/portrait"
-        app:layout_constraintTop_toBottomOf="@+id/like_number" />
+                <TextView
+                    android:id="@+id/delete_post"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="30dp"
+                    android:text="删除"
+                    android:textColor="@color/red"
+                    android:textSize="19dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/portrait" />
+
+                <TextView
+                    android:id="@+id/post_userinfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="学院"
+                    android:textColor="@color/text_gray"
+                    android:textSize="15dp"
+                    app:layout_constraintStart_toStartOf="@+id/post_username"
+                    app:layout_constraintTop_toBottomOf="@+id/post_username" />
+
+                <TextView
+                    android:id="@+id/post_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="这是内容这是内容这是内容这是内容这是内容这是内容这是内容"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/portrait"
+                    app:layout_constraintTop_toBottomOf="@+id/image" />
+
+                <TextView
+                    android:id="@+id/like_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="赞数"
+                    android:textColor="@color/black"
+                    android:textSize="19dp"
+                    app:layout_constraintEnd_toEndOf="@+id/like"
+                    app:layout_constraintStart_toStartOf="@+id/like"
+                    app:layout_constraintTop_toBottomOf="@+id/like" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="30dp"
+                    android:text="2000-00-00"
+                    android:textColor="@color/text_gray"
+                    android:textSize="12dp"
+                    app:layout_constraintStart_toStartOf="@+id/portrait"
+                    app:layout_constraintTop_toBottomOf="@+id/like_number" />
+
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="评论"
+                    android:textColor="@color/black"
+                    android:textSize="25dp"
+                    app:layout_constraintStart_toStartOf="@+id/date"
+                    app:layout_constraintTop_toBottomOf="@+id/date" />
+
+                <TextView
+                    android:id="@+id/comment_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="0"
+                    android:textColor="@color/text_gray"
+                    android:textSize="25dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/date" />
+
+                <LinearLayout
+                    android:id="@+id/comment_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <ImageView
         android:id="@+id/comment_button"
@@ -113,39 +175,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="评论"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="@+id/date"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
-
-    <TextView
-        android:id="@+id/comment_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:text="0"
-        android:textColor="@color/text_gray"
-        android:textSize="25dp"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
-
-    <LinearLayout
-        android:id="@+id/comment_container"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
 
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
