--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -62,6 +62,7 @@
         android:id="@+id/select_img"
         android:layout_width="128dp"
         android:layout_height="128dp"
+        app:tint = "@color/colorPrimary"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/submit"
         app:layout_constraintStart_toStartOf="@+id/submit"
