--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -53,7 +53,7 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_marginTop="20dp"
-                    android:src="@color/colorAccent"
+                    android:src="@drawable/like"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/portrait"
                     app:layout_constraintTop_toBottomOf="@+id/post_content" />
