--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -30,7 +30,7 @@
         android:id="@+id/like"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@color/colorAccent"
+        android:src="@drawable/like"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="@+id/portrait"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -40,7 +40,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginLeft="25dp"
-        android:src="@color/colorAccent"
+        android:src="@drawable/comment"
         app:layout_constraintStart_toEndOf="@+id/like"
         app:layout_constraintTop_toTopOf="@+id/like" />
 
