--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -27,6 +27,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/add"
+        app:tint="@color/colorPrimary"
         android:layout_marginBottom="100dp"
         android:layout_marginRight="60dp"
 
