--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/bnm_item1"
-        android:title="这个"
+        android:icon="@drawable/home"
+        android:iconTint="@color/white"
+        android:title="主页"
         />
     <item
         android:id="@+id/bnm_item2"
-        android:title="那个"
+        android:icon="@drawable/forum"
+        android:iconTint="@color/white"
+        android:title="讨论区"
         />
     <item
         android:id="@+id/bnm_item3"
-        android:title="另一个"
+        android:icon="@drawable/user_circle"
+        android:iconTint="@color/white"
+        android:title="我"
         />
 </menu>
