--- a/app/src/main/res/menu/schedule_nav_menu.xml
+++ b/app/src/main/res/menu/schedule_nav_menu.xml
@@ -3,9 +3,13 @@
     <item android:title="同步">
         <menu>
             <item
+                android:icon="@drawable/cloud_download"
+                android:iconTint="@color/nav_icon"
                 android:id="@+id/nm_sync"
                 android:title="同步至本地" />
             <item
+                android:icon="@drawable/cloud_upload"
+                android:iconTint="@color/nav_icon"
                 android:id="@+id/nm_upload"
                 android:title="同步至云端" />
         </menu>
@@ -14,9 +18,13 @@
     <item android:title="导入/导出">
         <menu>
             <item
+                android:icon="@drawable/download"
+                android:iconTint="@color/nav_icon"
                 android:id="@+id/nm_to_json"
                 android:title="导出课表" />
             <item
+                android:icon="@drawable/folder_add"
+                android:iconTint="@color/nav_icon"
                 android:id="@+id/nm_from_json"
                 android:title="导入课表"/>
         </menu>
