--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -52,20 +52,22 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_bg"
+        android:backgroundTint="@color/colorPrimary"
         android:text="提交"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="TextContrastCheck" />
 
     <ImageView
         android:id="@+id/select_img"
         android:layout_width="128dp"
         android:layout_height="128dp"
-        app:tint = "@color/colorPrimary"
+        app:tint = "@color/light_gray"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/submit"
         app:layout_constraintStart_toStartOf="@+id/submit"
-        app:srcCompat="@drawable/add" />
+        app:srcCompat="@drawable/pic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
