--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -157,7 +157,8 @@
 
     <Button
         android:id="@+id/button"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_bg"
+        android:backgroundTint="@color/colorPrimary"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
