--- a/app/src/main/res/layout/activity_see_course.xml
+++ b/app/src/main/res/layout/activity_see_course.xml
@@ -162,7 +162,8 @@
 
         <Button
             android:id="@+id/btn_copy"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -189,7 +190,8 @@
             android:layout_marginTop="15dp"
 
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/button_bg"
+            android:backgroundTint="@color/colorPrimary"
             android:text="修改"
             android:textColor="@color/white" />
 
