--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,9 +10,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="20dp"
@@ -49,7 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="今日新闻"
-        android:textSize="25dp"
+        android:textSize="20dp"
+        android:layout_marginBottom="5dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
@@ -62,7 +63,8 @@
         android:layout_marginRight="25dp"
         android:text="添加"
         android:textColor="@color/text_gray"
-        android:textSize="25dp"
+        android:textSize="20dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
