--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3DA1B4</color>
+    <color name="colorPrimaryDark">#3997AA</color>
+    <color name="colorAccent">#287888</color>
 
     <color name="nav_icon">#E3E3E3</color>
 
@@ -19,4 +19,8 @@
     <color name="nothing">#00000000</color>
 
     <color name="text_gray">#AEAEAE</color>
+    <color name="light_gray">#D3D3D3</color>
+
+    <color name="nav_menu_icon">#5E5E5E</color>
+    <color name="nav_menu_text">#474747</color>
 </resources>
