--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -38,7 +38,7 @@
 
         <EditText
             android:id="@+id/name_edit_text"
-            android:layout_width="100dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
 
@@ -59,16 +59,17 @@
 
         app:layout_constraintTop_toBottomOf="@+id/a1">
         <TextView
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="20dp"
             android:text="真实姓名："
-
+            android:layout_marginTop="20dp"
             android:layout_marginStart="16dp"
             />
     <EditText
         android:id="@+id/edit_realName"
         android:layout_width="200dp"
         android:layout_height="60dp"
+        android:layout_margin="20dp"
         android:hint="请输入您的姓名"
         android:padding="16dp"
         />
@@ -85,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/gender_title"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/a2"/>
@@ -167,7 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/age_seek_bar">
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:text="学校所在省份："
@@ -179,8 +180,7 @@
 
         <Spinner
             android:id="@+id/province_spinner"
-            android:layout_width="100dp"
-
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:entries="@array/province_array"
@@ -190,7 +190,7 @@
             app:layout_constraintTop_toBottomOf="@+id/age_seek_bar" />
 
         <TextView
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:text="学校:"
@@ -202,7 +202,7 @@
 
         <Spinner
             android:id="@+id/university_spinner"
-            android:layout_width="122dp"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:padding="8dp"
@@ -213,26 +213,16 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/terms_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/terms_title"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/b1"/>
-
-    <Button
         android:id="@+id/terms_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:background="@drawable/shape_btn"
-        android:backgroundTint="@color/very_light_gray"
-        android:text="@string/terms_button_text"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/terms_title"
-        app:layout_constraintTop_toBottomOf="@+id/terms_title" />
+        android:layout_marginTop="24dp"
+        android:text="@string/terms_title"
+        android:layout_marginRight="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/b1"
+        app:layout_constraintTop_toBottomOf="@+id/b1" />
+
+
 
     <Button
         android:id="@+id/submit_settings"
@@ -247,6 +237,6 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/terms_title" />
+        android:layout_marginBottom="30dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
