--- a/app/src/main/res/layout/card_comment.xml
+++ b/app/src/main/res/layout/card_comment.xml
@@ -13,10 +13,19 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="15dp"
         app:shapeAppearance="@style/CircleStyle"
+        android:scaleType="centerCrop"
         android:src="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <TextView
+        android:id="@+id/post_userinfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="学院"
+        android:textColor="@color/text_gray"
+        android:textSize="12dp"
+        app:layout_constraintStart_toStartOf="@+id/post_username"
+        app:layout_constraintTop_toBottomOf="@+id/post_username" />
     <TextView
         android:id="@+id/post_username"
         android:layout_width="wrap_content"
