--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         app:shapeAppearance="@style/CircleStyle"
+        android:scaleType="centerCrop"
         android:src="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
