--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
-        ></androidx.appcompat.widget.Toolbar>
+        tools:ignore="MissingConstraints"></androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp">
+        android:layout_marginStart="0dp"
+        app:layout_constraintTop_toTopOf="@id/toolbar"
+        >
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/pc_portrait"
             android:layout_width="80dp"
             android:layout_height="80dp"
-
+            android:scaleType="centerCrop"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="68dp"
             android:src="@color/colorAccent"
@@ -67,22 +68,28 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="-30dp"
+        android:background="@drawable/vie_b"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card"
+        android:orientation="horizontal" />
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp"
 
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#1A000000" />
 
         <RelativeLayout
             android:id="@+id/btn1"
@@ -92,11 +99,18 @@
             android:layout_marginBottom="12dp"
             android:clickable="true">
 
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/user_circle"
+                app:tint="@color/nav_menu_icon" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="60dp"
                 android:text="学生信息"
                 android:textColor="@color/text_gray"
                 android:textSize="16sp" />
@@ -112,39 +126,7 @@
                 />
 
         </RelativeLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#1A000000" />
 
-        <RelativeLayout
-            android:id="@+id/btn2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:clickable="true">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:text="互动消息"
-                android:textColor="@color/text_gray"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/chevron_right"
-
-                />
-
-        </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -158,11 +140,18 @@
             android:layout_marginBottom="12dp"
             android:clickable="true">
 
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/accessible_icon"
+                app:tint="@color/nav_menu_icon" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="60dp"
                 android:text="退出登录"
                 android:textColor="@color/text_gray"
                 android:textSize="16sp" />
@@ -178,6 +167,7 @@
                 />
 
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -191,11 +181,18 @@
             android:layout_marginBottom="12dp"
             android:clickable="true">
 
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/info_circle"
+                app:tint="@color/nav_menu_icon" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="60dp"
                 android:text="关于"
                 android:textColor="@color/text_gray"
                 android:textSize="16sp" />
@@ -211,12 +208,15 @@
                 />
 
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#1A000000" />
-
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="300dp"/>
 
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
