--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimary">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/shapeableImageView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="35dp"
+        android:src="@color/white"
+        app:shapeAppearance="@style/CircleStyle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/nav_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="今日课表"
+        android:textColor="@color/white"
         android:textSize="40dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/white"/>
+        android:layout_marginLeft="10dp"
+        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
+        app:layout_constraintTop_toTopOf="@+id/shapeableImageView" />
+
     <TextView
         android:id="@+id/nav_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="这里有一些介绍...什么的"
+        android:textColor="@color/white"
         android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="40dp"
-        android:textColor="@color/white"/>
-</LinearLayout>
+
+        app:layout_constraintStart_toStartOf="@+id/nav_title"
+        app:layout_constraintTop_toBottomOf="@+id/nav_title" />
+</androidx.constraintlayout.widget.ConstraintLayout>
