--- a/app/src/main/res/layout/card_login_or_register.xml
+++ b/app/src/main/res/layout/card_login_or_register.xml
@@ -7,56 +7,77 @@
     android:theme="@style/AppThemeLight"
     android:background="@color/white">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginRight="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
-        android:backgroundTint="@color/very_light_gray"
-        app:cardCornerRadius="30dp">
+        >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="你尚未登录..."
                 android:layout_marginTop="20dp"
+                android:text="你尚未登录..."
                 android:textSize="20dp"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="100dp"
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginBottom="40dp"
-                android:background="@drawable/button_bg"
-                android:backgroundTint="@color/white"
-                android:text="登录"
-                android:textColor="@color/text_gray"
+                android:layout_marginBottom="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btn_register"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+
+                    android:text="已有账号？点击"
+                    android:textColor="@color/text_gray" />
+
+                <TextView
+                    android:id="@+id/btn_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+
+                    android:text="登录"
+                    android:textColor="@color/colorPrimary" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btn_register"
-                android:layout_width="100dp"
+                android:layout_width="0dp"
+
                 android:layout_height="wrap_content"
-                android:layout_marginRight="40dp"
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/button_bg"
                 android:backgroundTint="@color/colorPrimary"
                 android:text="注册"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </LinearLayout>
