--- a/app/src/main/res/layout/fragment_personal_center.xml
+++ b/app/src/main/res/layout/fragment_personal_center.xml
@@ -22,7 +22,13 @@
         android:layout_marginStart="0dp"
         app:layout_constraintTop_toTopOf="@id/toolbar"
         >
-
+        <!--背景图片-->
+        <ImageView
+            android:id="@+id/bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            />
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/pc_portrait"
             android:layout_width="80dp"
@@ -31,6 +37,9 @@
             android:layout_marginTop="32dp"
             android:layout_marginBottom="68dp"
             android:src="@color/colorAccent"
+            app:strokeColor="@color/white"
+            android:padding="2dp"
+            app:strokeWidth="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.09"
